hphp/hack/test/typecheck/null/null_not_subtype_nonnull.php
<?hh
// Copyright 2004-present Facebook. All Rights Reserved.

function test(): nonnull {
  return null;
}
